src/styles/resume-pdf.css
.resume {
  --resume-rgb-font-color: 68, 68, 68;
  --resume-rgb-background-color: 255, 255, 255;

  --resume-font-color: rgb(var(--resume-rgb-font-color));
  --resume-background-color: rgb(var(--resume-rgb-background-color));

  /* Read variables from React styles property */
  --margin: var(--resume-margin, 15mm);
  --font-family: var(--resume-font-family, 'Arial, sans-serif');
  --font-size: var(--resume-font-size, 8pt);
  --title-size: var(--resume-title-size, 2em);
  --subtitle-size: var(--resume-subtitle-size, 1.5em);
  --item-title-size: var(--resume-item-title-size, 1.1em);
  --sections-gap: var(--resume-sections-gap, 4mm);
  --items-gap: var(--resume-items-gap, 3mm);
  --item-title-content-gap: var(--resume-item-title-content-gap, 1mm);

  /* Actual values */
  font-size: var(--font-size);
  font-family: var(--font-family);

  i {
    font-size: 1em;
  }

  a i {
    margin-left: 0.3em;
  }
}

.resume--a4 {
  --sheet-width: 210mm;
  --sheet-height: 297mm;
}

.resume--letter {
  --sheet-width: 8.5in;
  --sheet-height: 11in;
}

.resume__sheet {
  width: var(--sheet-width);
  min-height: var(--sheet-height);
  padding: var(--margin);

  background-color: var(--resume-background-color);
  color: var(--resume-font-color);
}

.resume__title {
  font-size: var(--title-size);
  font-weight: bold;
  text-align: center;
}

/* Resume section styles */

.resume__section {
}

.resume__section:not(:first-child) {
  margin-top: var(--sections-gap);
}

.resume__contact-items {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5em;

  span {
    display: contents;
  }
}

.resume__subtitle {
  font-size: var(--subtitle-size);
  font-weight: bold;

}

.resume__subtitle--underlined {
  border-bottom: 1.3pt solid var(--resume-font-color);
  padding-bottom: 0.2em;
  margin-bottom: 0.3em;
}

/* Resume section items styles */

.resume__items {
  display: flex;
  flex-direction: column;
  gap: var(--items-gap);
}

.resume__item-header {
  display: flex;
  justify-content: space-between;

  font-weight: bold;

  margin-bottom: var(--item-title-content-gap);
}

.resume__item-title {
  font-size: var(--item-title-size);

  small {
    margin-left: 0.5em;
    font-size: 0.9em;
    color: rgba(var(--resume-rgb-font-color), 0.8);
  }
}

.resume__item-subheader {
  display: flex;
  justify-content: space-between;

  font-size: 1em;
  font-weight: bold;
}

.resume__item-details {
  display: flex;

  > li:not(:first-child) {
    margin-left: 0.5em;

    &::before {
      content: '•';
      margin-right: 0.5em;
    }
  }
}

.resume__bullet-list {
  list-style-type: disc;
  padding: 0 1.5em;
}

@media print {
  body {
    visibility: hidden;
  }

  .resume {
    visibility: visible;

    transform: none !important;
    position: fixed;
    inset: 0;
  }
}

